<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/kalender"
            android:title="@string/navigation_view_item_1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/makanan"
            android:title="@string/navigation_view_item_2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/vaksin"
            android:title="@string/navigation_view_item_3" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/loc"
            android:title="@string/navigation_view_item_5" />
    </group>

    <item android:title="Informasi">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/tentang"
                android:title="@string/navigation_view_item_6" />

        </menu>
    </item>

</menu>
